--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wappalyzer",
+  "name": "wappalyzer-rm",
   "description": "Identify technology on websites",
   "keywords": [
     "analyze",
@@ -18,7 +18,7 @@
   "license": "GPL-3.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/wappalyzer/wappalyzer"
+    "url": "https://github.com/RedMapleTech/wappalyzer-rm"
   },
   "funding": [
     {
